bug white background visible

--- a/src/global.css
+++ b/src/global.css
@@ -42,4 +42,5 @@ h2 {
 button {
     border: none;
     font-family: inherit;
+    background-color: #f3f3f5;
 }
